ci: add CI workflow and polish repo
- Add .github/workflows/ci.yml with PHP syntax check (8.2/8.3/8.4 matrix) and PHPCS
- Add CI badge to README.md
- Fix composer.json name to valid vendor/package format
- Fix phpcs.xml: use WordPress ruleset (WordPress-Theme removed in WPCS 3.x)
- Remove duplicate class definitions from all inc/ files (would cause PHP fatal errors)
- Fix Yoda conditions in class-customizer.php
- Add phpcs:ignore for WP core filter usage in class-performance.php
- Auto-fix code style issues via phpcbf

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "starter-theme",
+  "name": "devaloi/starter-theme",
   "description": "A clean, accessible WordPress block theme with full FSE support",
   "version": "1.0.0",
   "license": "GPL-2.0-or-later",
