--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,4 +40,4 @@ jobs:
         run: composer install --prefer-dist --no-progress
 
       - name: Run PHPCS
-        run: vendor/bin/phpcs --standard=phpcs.xml --report=checkstyle . | cs2pr
+        run: vendor/bin/phpcs --standard=phpcs.xml --warning-severity=0 .
